--- a/one/index.html
+++ b/one/index.html
@@ -37,16 +37,16 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<img src="./images/logo.svg"/>
-											<h2><i>Designs</i></h2>
+											<div style="display: inline-block">
+												<img src="./images/logo.svg"/>
+												<h2><i>Designs</i></h2>
+											</div>
+											<!-- <div style="display: inline-block">
+													<img src="images/headtopi.png" alt="Topi" width="550" />
+											</div> -->
 										</header>
-										<!-- <ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
-										</ul> -->
+										
 									</div>
-									<span class="image object">
-										<img src="images/headtopi.png" alt="" />
-									</span>
 								</section>
 
 							<!-- Section -->
