--- a/one/index.html
+++ b/one/index.html
@@ -9,6 +9,9 @@
 		<title>DB'Topis</title>
 		<meta charset="utf-8" />
 		<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+		<script type="module">
+			import deta from "./node_modules/deta";
+		</script>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
