--- a/one/index.html
+++ b/one/index.html
@@ -9,9 +9,12 @@
 		<title>DB'Topis</title>
 		<meta charset="utf-8" />
 		<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+		<!-- <script  data-main="scripts/main" src = "libs/require.js"></script> -->
 		<script type="module">
-			import deta from "./node_modules/deta";
-		</script>
+			import DT from './node_modules/deta';
+			// const deta = DT("c06h981w_T2EgP5tkU2KDNZAPK95RYed1Xq5kef1o")
+			alert(DT)
+			</script>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
