--- a/one/index.html
+++ b/one/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<base href="/">
 		<title>DB'Topis</title>
 		<meta charset="utf-8" />
 		<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
