--- a/one/index.html
+++ b/one/index.html
@@ -8,14 +8,28 @@
 	<head>
 		<base href=".">
 		<title>DB'Topis</title>
+
+		<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-analytics.js"></script>
+
+		<script>
+  		var firebaseConfig = {
+    		apiKey: "AIzaSyDr13wzCnxT_wxsdlPbXnXjCCZ53TcdNCo",
+    		authDomain: "db-topis-design.firebaseapp.com",
+    		projectId: "db-topis-design",
+    		storageBucket: "db-topis-design.appspot.com",
+    		messagingSenderId: "606381818296",
+    		appId: "1:606381818296:web:64ad68f5cf1089a34d4f4d",
+    		measurementId: "G-09QEQRRWM6"
+  		};
+  		firebase.initializeApp(firebaseConfig);
+  		firebase.analytics();
+		var db = firebase.firestore();
+		</script>	
+
 		<meta charset="utf-8" />
 		<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-		<!-- <script  data-main="scripts/main" src = "libs/require.js"></script> -->
-		<script type="module">
-			import DT from './node_modules/deta';
-			// const deta = DT("c06h981w_T2EgP5tkU2KDNZAPK95RYed1Xq5kef1o")
-			alert(DT)
-			</script>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
@@ -139,7 +153,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="wpd.html">White Patto Design</a></li>
+										<li><a href="wpd.html">Kasab Patto Design</a></li>
 										<li><a href="kd.html">Kasab Design</a></li>
 										<li><a href="ayd.html">Add Your Design</a></li>
 									</ul>
