--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p style="text-align: justify; text-justify: inter-word;">Seeking a beginner role to enhance and explore my technical knowledge gained at University Of Kachchh in the last few years. I hold a B.Sc(CA&IT) degree from University Of Kachchh. Currently, i'm intern at Romin Interactive. </p>
+   			<p style="text-align: justify; text-justify: inter-word;">Seeking a beginner role to enhance and explore my technical knowledge gained at University Of Kachchh in the last few years. I hold a M.Sc(CA&IT) degree from University Of Kachchh. Currently, i'm intern at Romin Interactive. </p>
 
    			<ul class="info-list">
    				<li>
