--- a/index.html
+++ b/index.html
@@ -235,6 +235,31 @@
 </form>
         </div>
       </div>
+
+      <div class="col-md-6" data-aos="fade-left" data-aos-delay="300">
+        <div class="mt-3 px-1">
+          <div class="h5">Let’s talk how I can help you!</div>
+          <p>If you like my work and want to avail my services then drop me a message using the contact form. </p>
+          <p>Or get in touch using my email or my contact number.</p>
+          <p>See you!</p>
+        </div>
+        <div class="mt-53 px-1">
+          <div class="row"> 
+            <div class="col-sm-2">
+              <div class="pb-1">Email:</div>
+            </div>
+            <div class="col-sm-10">
+              <div class="pb-1 fw-bolder"><a href="mailto:hey@mundrawala.ml">hey@mundrawala.ml</a></div>
+            </div>
+            <div class="col-sm-2">
+              <div class="pb-1">Mobile:</div>
+            </div>
+            <div class="col-sm-10">
+              <div class="pb-1 fw-bolder"><a href="tel:+917490972908">+91 74909 72908</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
       <script>
         new Vue({
           el:'#contact',
@@ -300,30 +325,6 @@
       </script>
       
      
-      <div class="col-md-6" data-aos="fade-left" data-aos-delay="300">
-        <div class="mt-3 px-1">
-          <div class="h5">Let’s talk how I can help you!</div>
-          <p>If you like my work and want to avail my services then drop me a message using the contact form. </p>
-          <p>Or get in touch using my email or my contact number.</p>
-          <p>See you!</p>
-        </div>
-        <div class="mt-53 px-1">
-          <div class="row"> 
-            <div class="col-sm-2">
-              <div class="pb-1">Email:</div>
-            </div>
-            <div class="col-sm-10">
-              <div class="pb-1 fw-bolder"><a href="mailto:hey@mundrawala.ml">hey@mundrawala.ml</a></div>
-            </div>
-            <div class="col-sm-2">
-              <div class="pb-1">Mobile:</div>
-            </div>
-            <div class="col-sm-10">
-              <div class="pb-1 fw-bolder"><a href="tel:+917490972908">+91 74909 72908</a></div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div>
@@ -359,3 +360,4 @@
     <script src="./scripts/main.js?ver=1.2.0"></script>
   </body>
 </html>
+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
