--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
               <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
               <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
               <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+		<li class="nav-item"><a class="nav-link" href="./old/MURTAZA-MUNDRAWALA.pdf">Resume</a></li>
             </ul>
           </div>
         </div>
