--- a/raj-nx/index.html
+++ b/raj-nx/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
     <link rel="stylesheet" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <meta name = "viewport" content = "width=device-width, minimum-scale=1.0, maximum-scale = 1.0, user-scalable = no">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"/>
     <title>Raj NX</title>
 </head>
