--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </div>
     <div class="row py-3">
       <div class="col-md-4 text-center" data-aos="fade-up" data-aos-delay="100"><img class="mb-2" src="images/services/web-design.svg" width="96" height="96" alt="web design"/>
-        <div class="h5">Web Design</div>
+        <div class="h5">Web Development</div>
       </div>
       <div class="col-md-4 text-center" data-aos="fade-up" data-aos-delay="300"><img class="mb-2" src="images/services/ui-ux.svg" width="96" height="96" alt="ui-ux"/>
         <div class="h5">UI/UX</div>
