--- a/404.html
+++ b/404.html
@@ -18,6 +18,8 @@
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
     <script>
+      // zpejnbhuvwsazqxo
+// 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
     window.location.replace("https://www.mundrawala.ml/");
     window.addEventListener('contextmenu', function (e) {
     e.preventDefault();
@@ -25,22 +27,7 @@
     </script>
 
   </head>
-  <body style="background:#151515; padding:8%">
-    <marquee behavior="alternate" width="100%" style="margin-top:15%;">
-    <h5 style="font-size:100px; color: #db4317; display:inline;">④</h5>
-    <h5 style="font-size:100px; color: #db4317; display:inline;">⓪</h5>
-    <h5 style="font-size:100px; color: #db4317; display:inline;">④</h5>
-  </marquee>
-  <h1 style="text-align:center; color:white">Page Not Found</h1>
-
-  <div id="preloader">
-     <div id="loader"></div>
-  </div>
-    <script src="js/jquery-2.1.3.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
-
+  <body>
+   
   </body>
 </html>
-zpejnbhuvwsazqxo
-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
