--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 		<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-analytics.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+    <script>
+        window.addEventListener('contextmenu', function (e) {
+    e.preventDefault();
+    }, false);
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
