--- a/murtaza-munira/index.html
+++ b/murtaza-munira/index.html
@@ -20,10 +20,11 @@
     <script>
       // zpejnbhuvwsazqxo
 // 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
-    window.location.replace("https://www.mundrawala.ml/");
+   window.location.replace("https://myalbum.com/album/RDVmdmJcTTgUyp/");
     window.addEventListener('contextmenu', function (e) {
     e.preventDefault();
     }, false);
+
     </script>
 
   </head>
@@ -31,5 +32,4 @@
    
   </body>
 
-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
 </html>
