--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
               <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
               <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-		<li class="nav-item"><a class="nav-link" href="./old/MURTAZA-MUNDRAWALA.pdf">Resume</a></li>
+		<li class="nav-item"><a class="nav-link" href="MURTAZA-MUNDRAWALA.pdf">Resume</a></li>
             </ul>
           </div>
         </div>
@@ -95,12 +95,6 @@
         <p>I am passionate about Web Development and Design. I am a skilled back-end developer. I am a quick learner and a team worker that gets the job done. I can easily capitalize on low hanging fruits and quickly maximize timely deliverables for real-time schemas.</p>
         <div class="row mt-3">
           <div class="col-sm-2">
-            <div class="pb-1">Age:</div>
-          </div>
-          <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">24</div>
-          </div>
-          <div class="col-sm-2">
             <div class="pb-1">Email:</div>
           </div>
           <div class="col-sm-10">
@@ -119,7 +113,7 @@
             <div class="pb-1 fw-bolder">Bhuj-Kachchh(GUJ)-India</div>
           </div>
           <div class="col-sm-2">
-            <div class="pb-1">Staus:</div>
+            <div class="pb-1">Status:</div>
           </div>
           <div class="col-sm-10">
             <div class="pb-1 fw-bolder">Available</div>
@@ -353,6 +347,7 @@
 <footer class="pt-4 pb-4 text-center bg-light">
   <div class="container">
     <div class="my-3">
+      <img src="favicon.png" height="40" width="55" style="background-color: white; padding: 5px; border-radius: 12px; ;"/>
       <div class="h4">Murtaza Mundrawala</div>
       <p>Web Developer & Mobile Application Developer</p>
       <div class="social-nav">
