--- a/jalaram_cafe/index.html
+++ b/jalaram_cafe/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Food and Restorent One page Template</title>
+        <title>JALARAM CAFE</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -40,7 +40,6 @@
                     <div class="row">	
                         <div class="col-md-5 col-md-offset-3 col-sm-12 text-right">
                             <div class="call_us_text">
-								<a href=""><i class="fa fa-clock-o"></i> Order Foods 24/7</a>
 								<a href=""><i class="fa fa-phone"></i>061 9876 5432</a>
 							</div>
                         </div>
@@ -48,13 +47,7 @@
                         <div class="col-md-4 col-sm-12">
                             <div class="head_top_social text-right">
                                 <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                                <a href=""><i class="fa fa-pinterest-p"></i></a>
-                                <a href=""><i class="fa fa-youtube"></i></a>
-                                <a href=""><i class="fa fa-phone"></i></a>
-                                <a href=""><i class="fa fa-camera"></i></a>
+                                <a href=""><i class="fa fa-instagram"></i></a>
                             </div>	
                         </div>
 
@@ -69,31 +62,14 @@
                     <div class="row">
                         <nav class="navbar navbar-default">
                             <div class="container-fluid">
-                                <!-- Brand and toggle get grouped for better mobile display -->
                                 <div class="navbar-header">
-                                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                                        <span class="sr-only">Toggle navigation</span>
-                                        <span class="icon-bar"></span>
-                                        <span class="icon-bar"></span>
-                                        <span class="icon-bar"></span>
-                                    </button>
                                     <a class="navbar-brand our_logo" href="#"><img src="assets/images/logo.png" alt="" /></a>
                                 </div>
-
-                                <!-- Collect the nav links, forms, and other content for toggling -->
-                                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-                                    <ul class="nav navbar-nav navbar-right">
-                                        <li><a href="#slider">Home</a></li>
-                                        <li><a href="#abouts">Menu</a></li>
-                                        <li><a href="#features">Features</a></li>
-                                        <li><a href="#portfolio">Delivery</a></li>
-                                        <li><a href="#ourPakeg">News</a></li>
-                                        <li><a href="#mobaileapps">Pages</a></li>
-                                        <li><a href="#" class="booking">Table Booking</a></li>
-                                    </ul>
-                                </div><!-- /.navbar-collapse -->
+                                
                             </div><!-- /.container-fluid -->
+                            <div>
+                                <p style="text-align: right; font-size: 180%; font-weight: bold; font-family: cursive; color: bisque;">JALARAM CAFE</p>
+                            </div>
                         </nav>
                     </div>
                 </div>
@@ -316,29 +292,6 @@
             </div>
         </section>
 
-        <section id="mobaileapps" class="mobailapps">
-            <div class="slider_overlay">
-                <div class="container">
-                    <div class="row">
-                        <div class="main_mobail_apps_content wow zoomIn">
-                            <div class="col-md-5 col-sm-12 text-center">
-                                <img src="assets/images/iphone.png" alt="" />
-                            </div>
-                            <div class="col-md-7 col-sm-12">
-                                <div class="single_monail_apps_text">
-                                    <h4> Happy to Announce </h4>
-                                    <h1>Mobile App <span>is Available in every OS platform.</span></h1>
-
-                                    <a href=""><img src="assets/images/google.png" alt="" /></a>
-                                    <a href=""><img src="assets/images/apps.png" alt="" /></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <section id="footer_widget" class="footer_widget">
             <div class="container">
                 <div class="row">
@@ -348,67 +301,28 @@
                                 <h3>Take it easy with location</h3>
 
                                 <div class="single_widget_info">
-                                    <p>112-Legere ancillae vix ne.
+                                    <p>Bhuj-Mundra Road,
 
-                                        <span>Te elit putent propriae eum,</span>
-                                        <span>aliquip nominati</span>
+                                        <span>Near Kachchh University,</span>
+                                        <span>Bhuj-Kachchh 370001</span>
                                         <span class="phone_email">phone: 00 000 000</span>
                                         <span>Email: support@templatemela.com</span></p>
                                 </div>
 
                                 <div class="footer_socail_icon">
                                     <a href=""><i class="fa fa-facebook"></i></a>
-                                    <a href=""><i class="fa fa-google-plus"></i></a>
-                                    <a href=""><i class="fa fa-twitter"></i></a>
-                                    <a href=""><i class="fa fa-linkedin"></i></a>
-                                    <a href=""><i class="fa fa-pinterest-p"></i></a>
-                                    <a href=""><i class="fa fa-youtube"></i></a>
-                                    <a href=""><i class="fa fa-phone"></i></a>
-                                    <a href=""><i class="fa fa-camera"></i></a>
+                                    <a href=""><i class="fa fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="single_widget wow fadeIn" data-wow-duration="4s">
-                                <h3>Take it easy with location</h3>
 
                                 <div class="single_widget_info">
-                                    <p><span class="date_day">Monday To Friday</span>
-                                        <span>8:00am to 10:00pm(Breakfast)</span>
-                                        <span>11:00am to 10:00pm(Lunch/Diner)</span>
-
-                                        <span class="date_day">Saturday & Sunday</span>
-                                        <span>10:00am to 11:00pm(Brunch)</span>
-                                        <span>11:00am to 12:00pm(Lunch/Dinner)</span></p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4">
-                            <div class="single_widget wow fadeIn" data-wow-duration="5s">
-                                <h3>Take it easy with location</h3>
-
-                                <div class="single_widget_form text-left">
-                                    <form action="#" id="formid">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" name="name" placeholder="first name" required="">
-                                        </div>
-
-                                        <div class="form-group">
-                                            <input type="email" class="form-control" name="email" placeholder="Email" required="">
-                                        </div>
-
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Subject">
-                                        </div> <!-- end of form-group -->
-
-                                        <div class="form-group">
-                                            <textarea class="form-control" name="message" rows="3" placeholder="Message"></textarea>
-                                        </div>
-
-                                        <input type="submit" value="click here" class="btn btn-primary">
-                                    </form>	
+                                    <p><span class="date_day">Monday To Sunday</span>
+                                        <span>10:00am to 12:00am</span>
+                                        </p>
                                 </div>
                             </div>
                         </div>
@@ -425,7 +339,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="copyright wow zoomIn" data-wow-duration="3s">
-							<p>Made with <i class="fa fa-heart"></i> by <a href="http://bootstrapthemes.co">Bootstrap Themes</a>2016. All Rights Reserved</p>
+							<p>Made with <i class="fa fa-heart"></i> by <a href="https://www.mundrawala.ml/"><img src="assets/images/dev.svg" width="21" height="15"/></a>2021. All Rights Reserved</p>
 						</div>
                     </div>
                 </div>
