--- a/jalaram_cafe/index.html
+++ b/jalaram_cafe/index.html
@@ -296,7 +296,7 @@
             <div class="container">
                 <div class="row">
                     <div class="footer_widget_content text-center">
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <div class="single_widget wow fadeIn" data-wow-duration="2s">
                                 <h3>Take it easy with location</h3>
 
@@ -316,12 +316,12 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <div class="single_widget wow fadeIn" data-wow-duration="4s">
 
                                 <div class="single_widget_info">
                                     <p><span class="date_day">Monday To Sunday</span>
-                                        <span>10:00am to 12:00am</span>
+                                        <span>Morning <b>10</b> O'Clock <br><br>TO<br></br> Midnight <b>12</b> O'Clock</span>
                                         </p>
                                 </div>
                             </div>
