--- a/jalaram_cafe/index.html
+++ b/jalaram_cafe/index.html
@@ -16,6 +16,9 @@
         <link rel="stylesheet" href="assets/css/font-awesome.min.css">
         <!--        <link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">-->
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet"> 
 
         <!--For Plugins external css-->
         <link rel="stylesheet" href="assets/css/animate/animate.css" />
@@ -68,7 +71,7 @@
                                 
                             </div><!-- /.container-fluid -->
                             <div>
-                                <p style="text-align: right; font-size: 180%; font-weight: bold; font-family: cursive; color: bisque;">JALARAM CAFE</p>
+                                <p style="text-align: right; font-size: large; margin: 15px; font-weight: bold; font-family: 'Architects Daughter', cursive; color: bisque;">JALARAM CAFE</p>
                             </div>
                         </nav>
                     </div>
