--- a/jalaram_cafe/index.html
+++ b/jalaram_cafe/index.html
@@ -42,13 +42,14 @@
                 <div class="container">
                     <div class="row">	
                         <div class="col-md-5 col-md-offset-3 col-sm-12 text-right">
-                            <div class="call_us_text">
-								<a href=""><i class="fa fa-phone"></i>061 9876 5432</a>
-							</div>
+                            <div class="head_top_social text-right">
+                                <a><i class="fa fa-map-marker"></i> Bhuj-Mundra Road, Near Kachchh University, Bhuj-Kachchh 370001</a>
+                                </div>
                         </div>
 
                         <div class="col-md-4 col-sm-12">
                             <div class="head_top_social text-right">
+                                <a href="tel:+919925074874"><i class="fa fa-phone"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-instagram"></i></a>
                             </div>	
@@ -308,8 +309,9 @@
 
                                         <span>Near Kachchh University,</span>
                                         <span>Bhuj-Kachchh 370001</span>
-                                        <span class="phone_email">phone: 00 000 000</span>
-                                        <span>Email: support@templatemela.com</span></p>
+                                        <span class="phone_email">Mobile: <a style="color: white;" href="tel:+919925074874">+91 99250 74874</a></span>
+                                        UPI-<a href="upi://pay?pa=mundrawala@uboi&pn=NARENDRA SISODIYA&cu=INR"> <img src="assets/images/upi-icon.svg" width="40" height="40"/></a>
+                                    </p>
                                 </div>
 
                                 <div class="footer_socail_icon">
