--- a/jalaram_cafe/index.html
+++ b/jalaram_cafe/index.html
@@ -43,7 +43,7 @@
                     <div class="row">	
                         <div class="col-md-5 col-md-offset-3 col-sm-12 text-right">
                             <div class="head_top_social text-right">
-                                <a><i class="fa fa-map-marker"></i> Bhuj-Mundra Road, Near Kachchh University, Bhuj-Kachchh 370001</a>
+                                <a><i class="fa fa-map-marker"></i> Bhuj-Mundra Road, Near Kachchh University, <br>Bhuj-Kachchh 370001</a>
                                 </div>
                         </div>
 
@@ -310,7 +310,7 @@
                                         <span>Near Kachchh University,</span>
                                         <span>Bhuj-Kachchh 370001</span>
                                         <span class="phone_email">Mobile: <a style="color: white;" href="tel:+919925074874">+91 99250 74874</a></span>
-                                        UPI-<a href="upi://pay?pa=mundrawala@uboi&pn=NARENDRA SISODIYA&cu=INR"> <img src="assets/images/upi-icon.svg" width="40" height="40"/></a>
+                                        UPI-<a href="upi://pay?pa=mundrawala@uboi&pn=JALARAM CAFE&cu=INR"> <img src="assets/images/upi-icon.svg" width="40" height="40"/></a>
                                     </p>
                                 </div>
 
