--- a/jalaram_cafe/index.html
+++ b/jalaram_cafe/index.html
@@ -43,7 +43,7 @@
                     <div class="row">	
                         <div class="col-md-5 col-md-offset-3 col-sm-12 text-right">
                             <div class="head_top_social text-right">
-                                <a><i class="fa fa-map-marker"></i> Bhuj-Mundra Road, Near Kachchh University, <br>Bhuj-Kachchh 370001</a>
+                                <a><i class="fa fa-map-marker"></i> Bhuj-Kachchh 370001</a>
                                 </div>
                         </div>
 
