--- a/jalaram_cafe/index.html
+++ b/jalaram_cafe/index.html
@@ -102,7 +102,7 @@
                     <div class="main_slider text-center">
                         <div class="col-md-12">
                             <div class="main_slider_content wow zoomIn" data-wow-duration="1s" id="banner">
-                                <h1>Survive <span>{{day}}</span>, with our <span id="dish">{{dish}}</span>.</h1>
+                                <h1 style="font-size: 50px;">Survive <span>{{day}}</span>, with our <span id="dish">{{dish}}</span>.</h1>
                                 <script>
                                     var app = new Vue({
                                         el: '#banner',
