--- a/jalaram_cafe/index.html
+++ b/jalaram_cafe/index.html
@@ -114,7 +114,7 @@
                                         },
                                         mounted(){
                                             this.day=this.days[new Date().getDay()]
-                                            this.dish = this.dishes[1]
+                                            this.dish = this.dishes[new Date().getDay()]
                                         }
 
                                     })
